@@ -4,6 +4,8 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.8
 
 	- Documentation updates (STR #2785)
+	- The scheduler would crash when some cupsd.conf directives
+	  were missing values (STR #2849)
 	- The web interface "move jobs" operation redirected users to
 	  the wrong URL (STR #2815)
 	- The Polish web interface translation contained errors
